--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -24,3 +24,9 @@
 .btn-login{
     line-height: .5em;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
